<resources>
    <string name="app_name">Most Starred Github Repos</string>
    <string name="settings">Settings</string>
    <string name="trending_repos">Trending Repos</string>
    <string name="trending">Trending</string>
    <string name="no_internet">No Internet Connection !</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and try again</string>
    <string name="try_again">Try again</string>
    <string name="sort_result">Sort result</string>
    <string name="searching_for_most_starred_repos">Searching for repos…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language">Language</string>
    <string name="change_application_language">Change application language</string>
    <string name="display_mode">Display Mode</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="change_theme">Change theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
</resources>